--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
+    "fs": "^0.0.1-security",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.6.11",
