--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.8",
     "fs": "^0.0.1-security",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.6.11",
     "react-dom": "^18.2.0",
