--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-currency-input-field": "^3.6.11",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
