added PieChart under the map

--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "dayjs": "^1.11.8",
     "fs": "^0.0.1-security",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-currency-input-field": "^3.6.11",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
