--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^8.0.2",
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^6.9.0",
@@ -25,6 +26,7 @@
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-styled-toggle": "^1.0.18",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
